styles/globals.css
@font-face {
  font-family: "Bai Jamjuree";
  src: url(../public/fonts/Bai_Jamjuree/BaiJamjuree-Bold.ttf);
}
@font-face {
  font-family: "Kanit";
  src: url(../public/fonts/Kanit/Kanit-Regular.ttf);
}
@font-face {
  font-family: "Play";
  src: url(../public/fonts/Play/Play-Regular.ttf);
}
.navbar-brand,
.section-header,
#home h1,
#experience .timeline-title,
#experience .timeline-subtitle,
#projects .card-title,
#contact .form-label {
  font-family: "Bai Jamjuree";
}

#home h3,
#about .about-paragraph,
#experience .timeline-list,
#projects .card-text,
#projects .icon-text,
#contact .contact-header,
#contact .contact-socials,
#contact .form-control {
  font-family: "Kanit";
}

.nav-link,
.navbar-footer .navbar-credit,
#home h2 {
  font-family: "Play";
}

body {
  background-color: #12233e;
}

a {
  text-decoration: none;
}
a:visited {
  color: #00b6ff;
}

textarea {
  resize: none;
  min-height: 65px !important;
}

.custom-scrollbar::-webkit-scrollbar {
  width: 10px;
}
.custom-scrollbar::-webkit-scrollbar-track {
  background: #214277;
}
.custom-scrollbar::-webkit-scrollbar-thumb {
  background: #64ffda;
  border-radius: 10px;
}
.custom-scrollbar::-webkit-scrollbar-thumb:hover {
  background: #24957a;
}

.navbar-header {
  min-height: 100px;
  width: 100%;
  position: fixed;
  display: flex;
  background-color: #0a192f;
  z-index: 99999;
}
.navbar-header a, .navbar-header ul, .navbar-header li {
  color: #ffffff;
}
.navbar-header .navbar-brand {
  font-size: 1.5rem;
  letter-spacing: 0.2px;
  text-transform: uppercase;
}
.navbar-header .navbar-toggler {
  color: white;
  border: 3px solid white;
  font-size: 1.5rem;
}
.navbar-header .navbar-collapse.show {
  padding: 1rem 0rem;
}
.navbar-header .nav-link {
  font-size: 1rem;
}
.navbar-header .navbar-brand:hover, .navbar-header .nav-link:hover {
  color: #64ffda;
}
.navbar-header .navbar-brand.active, .navbar-header .nav-link.active {
  color: #64ffda;
}
.navbar-header .nav-item {
  min-width: 80px;
}

.main-container {
  min-height: 100vh;
  color: #ffffff;
  padding-top: 100px;
}
.main-container .page-section {
  min-height: 88vh;
  padding-top: 100px;
}
.main-container .page-section .section-header {
  margin-bottom: 1.5rem;
}
.main-container .page-section .section-header .header-content {
  font-size: 2rem;
  padding-bottom: 3px;
  border-bottom: 3px solid #64ffda;
}

.navbar-footer {
  position: relative;
  min-height: 80px;
  display: flex;
  align-items: center;
  justify-content: center;
  font-weight: bold;
  text-align: center;
  background-color: #12233e;
  color: #ffffff;
  padding: 20px;
  border-top: 2px solid #64ffda;
  z-index: 99999;
}
.navbar-footer .navbar-credit {
  margin: 0px;
}
.navbar-footer a:hover {
  color: #64ffda;
}

.link-bullet {
  color: #00b6ff;
}

.btn-outline {
  background: none;
  color: #64ffda !important;
  border: 1px solid #64ffda;
  padding: 10px 15px;
  border-radius: 5px;
  min-width: 100px;
  text-align: center;
}
.btn-outline:hover {
  background: #24957a;
}

.theme-link {
  color: #00b6ff;
}

.image-container {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100%;
  width: 100%;
}
.image-container img {
  height: 100%;
  width: 100%;
}
.image-container.image-skills {
  max-width: 50%;
}

.card {
  position: relative;
  background-color: #0a192f;
  color: #ffffff;
}
.card .card-header {
  display: flex;
  align-items: center;
  justify-content: center;
}
.card .card-body .card-title {
  text-align: center;
  padding-bottom: 10px;
  margin-bottom: 1rem;
  border-bottom: 2px solid #64ffda;
}

.texture-bg {
  background-color: rgb(18, 35, 62);
  background-image: url(../public/images/textures/inspiration-geometry.png);
}

/* CSS Ruleset for Home section */
#home {
  padding-top: 0px;
}
#home h1 {
  font-size: 4rem;
  padding-top: 10rem;
  color: #64ffda;
}
#home h2 {
  font-size: 2rem;
}
#home h3 {
  font-size: 1.5rem;
  padding-top: 3rem;
}
#home .home-header {
  text-align: center;
}

/* CSS Ruleset for Home section */
/* CSS Ruleset for About section */
#about .about-paragraph {
  background-color: #0a192f;
  padding: 20px;
  text-align: justify;
}
#about .about-paragraph p {
  margin: 0px;
  font-size: 1.1rem;
}
#about .about-profile {
  position: relative;
  height: 220px;
  width: 220px;
  border: 3px solid #64ffda;
  border-radius: 5px;
}
#about .about-profile img {
  position: absolute;
  top: -10px;
  right: 5px;
  border-radius: 5px;
  z-index: 10;
}
#about .about-skills {
  padding: 5px;
  background-color: #0a192f;
}

/* CSS Ruleset for About section */
/* CSS Ruleset for Experience section */
#experience .experience-timeline .timeline-title {
  margin: 0px;
  font-size: 1.48rem;
}
#experience .experience-timeline .timeline-subtitle {
  margin: 0px;
  color: #ffffff;
  font-size: 1.24rem;
}
#experience .experience-timeline .timeline-container {
  background-color: #0a192f;
  padding: 20px 20px 10px 20px;
}
#experience .experience-timeline .timeline-container .timeline-list {
  text-align: justify;
}
#experience .experience-timeline .timeline-container .timeline-list .timeline-listitem {
  font-size: 1.12rem;
}

/* CSS Ruleset for Experience section */
/* CSS Ruleset for Projects section */
#projects .projects-application .card .card-repo, #projects .projects-application .card .card-link {
  position: absolute;
  color: #00b6ff;
}
#projects .projects-application .card .card-repo:hover, #projects .projects-application .card .card-link:hover {
  color: #64ffda;
}
#projects .projects-application .card .card-repo {
  top: 10px;
  right: 50px;
  font-size: 1.295rem;
}
#projects .projects-application .card .card-link {
  top: 10px;
  right: 15px;
  font-size: 1.2rem;
}
#projects .projects-application .card .card-footer {
  min-height: 200px;
}
#projects .projects-application .application-icon {
  font-size: 1.5rem;
}

/* CSS Ruleset for Projects section */
/* CSS Ruleset for Contact section */
#contact .contact-form .contact-header {
  display: flex;
  align-items: center;
}
#contact .contact-form .contact-header p {
  margin: 0px;
  font-size: 1.2rem;
}
#contact .contact-form .contact-socials p {
  font-size: 1.1rem;
}
#contact .contact-form .contact-socials .contact-link {
  color: #00b6ff;
}
#contact .contact-form .contact-socials .contact-link:hover {
  color: #64ffda;
}
#contact .contact-form .theme-container {
  background-color: #0a192f;
  padding: 20px;
}
#contact .contact-form .form-label {
  font-size: 1.2rem;
}
#contact .contact-form .form-control {
  border-radius: 0px;
}

/* CSS Ruleset for Contact section */
@media screen and (max-width: 992px) {
  #home h1 {
    padding-top: 5rem;
  }
}

/*# sourceMappingURL=globals.css.map */

